@@ -1,0 +1,56 @@
+<run>
+<!--precisionModel scale="1.0" offsetx="0.0" offsety="0.0"/-->
+<precisionModel type="FLOATING"/>
+<case>
+
+<desc>
+Extreme simplification of the Big Bad Nasty buffer.
+If the first element is reordered backward, things are fine !!
+</desc>
+
+<a>
+MULTIPOLYGON(((
+3135840 10098400,
+			3135702 10098200,
+			3135830 10098461,
+3135840 10098400
+)) , ((
+3129627 10098250,
+3130490 10098813,
+3130663 10098320,
+3130263 10097448,
+3129627 10098250
+),(
+3130240 10098310,
+3130210 10098340,
+3130193 10098318,
+3130240 10098310
+)))
+</a>
+
+<test>
+
+  <!--op name="buffer" arg1="a" arg3="0.000000001"-->
+  <op name="buffer" arg1="a" arg3="0">
+MULTIPOLYGON(((
+3135840 10098400,
+3135702 10098200,
+3135830 10098461,
+3135840 10098400
+)) , ((
+3129627 10098250,
+3130490 10098813,
+3130663 10098320,
+3130263 10097448,
+3129627 10098250
+),(
+3130240 10098310,
+3130210 10098340,
+3130193 10098318,
+3130240 10098310
+)))
+  </op>
+
+</test>
+</case>
+</run>
